--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="outer">
-    <form id="todo-creater">
+   <div class="outer-box">
+    <form id="todo-creater-form">
     <input placeholder="Enter todo task here" id="todo-creater-input" value=""/>
     <button>Add</button>
     </form>
+    <div id="todos-box"></div>
    </div>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
