--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <div class="outer-box">
-    <form id="todo-creater-form">
-    <input placeholder="Enter todo task here" id="todo-creater-input" value=""/>
-    <button>Add</button>
-    </form>
-    <div id="todos-box"></div>
-   </div>
-    <script src="./script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="container">
+			<h1>Todo List</h1>
+			<form id="todo-creater-form">
+				<input
+					placeholder="Enter todo task here"
+					id="todo-creater-input"
+					value=""
+				/>
+				<button>Add</button>
+			</form>
+			<div id="todos-box"></div>
+		</div>
+		<script src="./script.js"></script>
+	</body>
 </html>
