clearTodo Functionality added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<button>Add</button>
 			</form>
 			<div id="todos-box"></div>
+            <button id="clear-todo">Clear Todos</button>
 		</div>
 		<script src="./script.js"></script>
 		<script
