--- a/index.html
+++ b/index.html
@@ -4,29 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<div class="container">
-			<h1>Todo List</h1>
-			<form id="todo-creater-form">
-				<input
-					placeholder="Enter todo task here"
-					id="todo-creater-input"
-					value=""
-				/>
-				<button>Add</button>
-			</form>
-			<div id="todos-box"></div>
-            <button id="clear-todo">Clear Todos</button>
-		</div>
-		<script src="./script.js"></script>
+		<title>Todo Tracker</title>
 		<script
+			defer
 			src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
 			integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
+	</head>
+	<body>
+		<div class="container" />
 	</body>
 </html>
