--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		></script>
 	</head>
 	<body>
-		<div class="container" />
+		<div class="container">
+			<button id="clear-todo">Clear Todo</button>
+		</div>
 	</body>
 </html>
